--- a/app/globals.css
+++ b/app/globals.css
@@ -1,32 +1,38 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(from 180deg at 50% 50%,
-      #16abff33 0deg,
-      #0885ff33 55deg,
-      #54d6ff33 120deg,
-      #0071ff33 160deg,
-      transparent 360deg);
-  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0));
+  --primary-glow: conic-gradient(
+    from 180deg at 50% 50%,
+    #16abff33 0deg,
+    #0885ff33 55deg,
+    #54d6ff33 120deg,
+    #0071ff33 160deg,
+    transparent 360deg
+  );
+  --secondary-glow: radial-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0)
+  );
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(#00000080,
-      #00000040,
-      #00000030,
-      #00000020,
-      #00000010,
-      #00000010,
-      #00000080);
+  --tile-border: conic-gradient(
+    #00000080,
+    #00000040,
+    #00000030,
+    #00000020,
+    #00000010,
+    #00000010,
+    #00000080
+  );
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -41,20 +47,24 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(to bottom right,
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0.3));
+    --secondary-glow: linear-gradient(
+      to bottom right,
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0.3)
+    );
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(#ffffff80,
-        #ffffff40,
-        #ffffff30,
-        #ffffff20,
-        #ffffff10,
-        #ffffff10,
-        #ffffff80);
+    --tile-border: conic-gradient(
+      #ffffff80,
+      #ffffff40,
+      #ffffff30,
+      #ffffff20,
+      #ffffff10,
+      #ffffff10,
+      #ffffff80
+    );
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -76,7 +86,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 0.35rem;
+  width: 0.4rem;
 }
 
 body::-webkit-scrollbar-track {
@@ -84,7 +94,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #00ADB5;
+  background-color: #00adb5;
 }
 
 .main-wrapper {
@@ -110,6 +120,7 @@ a {
   user-select: none;
   font-size: smaller;
   transition: all 300ms ease;
+  overflow: hidden;
 }
 
 .sidebar .Navigation {
@@ -120,28 +131,28 @@ a {
 .sidebar .logo {
   display: flex;
   align-items: center;
-  padding: .5rem;
+  padding: 0.5rem;
   cursor: pointer;
-  color: #00ADB5;
+  color: #00adb5;
 }
 
 .expand {
   display: flex;
   align-items: center;
-  margin: 1rem .75rem;
-  padding: .5rem;
+  margin: 1rem 0.75rem;
+  padding: 0.5rem;
   transition: all 500ms;
-  color: #00ADB5;
+  color: #00adb5;
   cursor: pointer;
 }
 
 .sidebar .Navigation .nav-item {
   display: flex;
   align-items: center;
-  margin: 1rem .75rem;
-  padding: .5rem;
+  margin: 1rem 0.75rem;
+  padding: 0.5rem;
   cursor: pointer;
-  color: #00ADB5;
+  color: #00adb5;
   transition: all 500ms;
   border-radius: 10px;
 }
@@ -151,11 +162,11 @@ a {
 }
 
 .sidebar .Navigation .nav-item:hover {
-  background-color: #00ADB5;
+  background-color: #00adb5;
   color: #222831;
 }
 
 .nav-item.active {
-  background-color: #00ADB5;
+  background-color: #00adb5;
   color: #222831 !important;
 }
