--- a/app/globals.css
+++ b/app/globals.css
@@ -9,30 +9,24 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -47,30 +41,54 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
+}
+
+.w-100 {
+  font-weight: 100;
+}
+
+.w-200 {
+  font-weight: 200;
+}
+
+.w-300 {
+  font-weight: 300;
+}
+
+.w-400 {
+  font-weight: 400;
+}
+
+.w-500 {
+  font-weight: 500;
+}
+
+.w-600 {
+  font-weight: 600;
+}
+
+.w-700 {
+  font-weight: 700;
 }
 
 * {
@@ -83,6 +101,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #161618;
+  color: white;
 }
 
 body::-webkit-scrollbar {
@@ -114,11 +134,11 @@ a {
   position: fixed;
   display: flex;
   flex-direction: column;
-  background-color: #222831;
+  background-color: #212124;
   height: 100vh;
   align-items: center;
   user-select: none;
-  font-size: smaller;
+  font-size: small;
   transition: all 300ms ease;
   overflow: hidden;
 }
@@ -133,7 +153,7 @@ a {
   align-items: center;
   padding: 0.5rem;
   cursor: pointer;
-  color: #00adb5;
+  color: #818181;
 }
 
 .expand {
@@ -142,7 +162,7 @@ a {
   margin: 1rem 0.75rem;
   padding: 0.5rem;
   transition: all 500ms;
-  color: #00adb5;
+  color: #818181;
   cursor: pointer;
 }
 
@@ -152,9 +172,10 @@ a {
   margin: 1rem 0.75rem;
   padding: 0.5rem;
   cursor: pointer;
-  color: #00adb5;
+  color: #818181;
   transition: all 500ms;
   border-radius: 10px;
+  font-weight: 500;
 }
 
 .sidebar .Navigation .nav-item .text {
