--- a/app/drivers/driverdeets.css
+++ b/app/drivers/driverdeets.css
@@ -236,10 +236,8 @@
   margin: 10px 5px;
 }
 
-.modal-content .close-icon {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 10px;
+.modal-content .modal-top span {
+  cursor: pointer;
 }
 
 .modal-content h3 {
@@ -267,10 +265,17 @@
   margin-bottom: 6px;
 }
 
+.modal-content .modal-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 2px 20px;
+}
+
 .modal-content button {
   padding: 8px 16px;
   background-color: #00adb5;
-  color: #fff;
+  color: #000000;
   border: none;
   border-radius: 4px;
   cursor: pointer;
