--- a/app/drivers/driverdeets.css
+++ b/app/drivers/driverdeets.css
@@ -131,7 +131,7 @@
   padding: 0.7rem;
   border-radius: 6px;
   outline: 2px solid #212124;
-  background: transparent;
+  background-color: #212124;
   border: none;
   color: white;
   font-family: inherit;
