--- a/app/globals.css
+++ b/app/globals.css
@@ -1,76 +1,19 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --background-color: #161618;
+  --secondary-color: #212124;
+  --text-color: #fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+[data-theme='dark'] {
+  --background-color: #161618;
+  --secondary-color: #212124;
+  --text-color: #fff;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+[data-theme='light'] {
+  --background-color: #E0E0E0;
+  --secondary-color: #fafafa;
+  --text-color: #000;
 }
 
 .w-100 {
@@ -111,8 +54,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #161618;
-  color: white;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 body::-webkit-scrollbar {
@@ -145,14 +88,16 @@ a {
   position: fixed;
   display: flex;
   flex-direction: column;
-  background-color: #212124;
+  background-color: var(--secondary-color);
   height: 100vh;
   align-items: center;
+  justify-content: space-between;
   user-select: none;
   font-size: small;
   transition: all 300ms ease;
   overflow: hidden;
   z-index: 1;
+  padding-bottom: 1rem;
 }
 
 .sidebar .Navigation {
@@ -202,4 +147,8 @@ a {
 .nav-item.active {
   background-color: #00adb5;
   color: #222831 !important;
+}
+
+.sidebar .color-mode {
+  cursor: pointer;
 }
