Added loading state for creating drivers

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,15 @@
   font-weight: 700;
 }
 
+button{
+  outline: none;
+  border: inherit;
+  color: inherit;
+  background-color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
