Added editing of drivers

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@
   font-weight: 700;
 }
 
-button{
+button {
   outline: none;
   border: inherit;
   color: inherit;
@@ -160,4 +160,16 @@ a {
 
 .sidebar .color-mode {
   cursor: pointer;
+}
+
+.hide-background {
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
