--- a/app/drivers/Components/create_driver.styles.css
+++ b/app/drivers/Components/create_driver.styles.css
@@ -22,6 +22,7 @@
     background-color: var(--secondary-color);
     padding: 20px;
     border-radius: 12px;
+    z-index: 10;
 }
 
 .driver-modal-content {
