--- a/app/drivers/Components/create_driver.styles.css
+++ b/app/drivers/Components/create_driver.styles.css
@@ -1,15 +1,11 @@
-.create-button {
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
-    z-index: 10;
-
-    padding: 1rem;
+.search-button{
+    padding: .8rem 1.5rem;
     background-color: var(--secondary-color);
     border-radius: 10px;
-    margin: 1.25rem;
-    font-size: .9rem;
+    font-size: .8rem;
+    width: fit-content;
 
+    white-space: nowrap;
     user-select: none;
     cursor: pointer;
 }
