Added Deletion of Drivers

--- a/app/drivers/Components/create_driver.styles.css
+++ b/app/drivers/Components/create_driver.styles.css
@@ -73,3 +73,13 @@
     user-select: none;
     cursor: pointer;
 }
+
+.submit.delete-button{
+    background-color: lightcoral;
+}
+
+.driver-modal-content .buttons{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
