Added Search Drivers

--- a/app/drivers/Components/create_driver.styles.css
+++ b/app/drivers/Components/create_driver.styles.css
@@ -75,7 +75,7 @@
 }
 
 .submit.delete-button{
-    background-color: lightcoral;
+    background-color: #FF6969;
 }
 
 .driver-modal-content .buttons{
