--- a/app/drivers/driver.styles.css
+++ b/app/drivers/driver.styles.css
@@ -87,6 +87,11 @@
   width: fit-content;
   user-select: none;
 
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
+  width: auto; 
+
   transition: all 250ms;
 }
 
