--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,14 @@ body::-webkit-scrollbar-thumb {
   border-radius: 8px;
 }
 
+.bg {
+  background-color: var(--background-color) !important;
+}
+
+.fg {
+  background-color: var(--secondary-color) !important;
+}
+
 .main-wrapper {
   margin-left: 75px;
 }
