--- a/app/globals.css
+++ b/app/globals.css
@@ -181,3 +181,25 @@ a {
   height: 100%;
   z-index: 2;
 }
+
+.search {
+  outline: none;
+  padding: 0.7rem;
+  border-radius: 6px;
+  outline: 2px solid var(--secondary-color);
+  background-color: var(--secondary-color);
+  border: none;
+  color: var(--text-color);
+  font-family: inherit;
+  font-size: 14px;
+  margin: 10px 0;
+
+  transition: all 250ms;
+  flex: 1 1 auto;
+}
+
+.search:focus {
+  outline: 2px solid #787879;
+  flex: 2 1 auto;
+  transition: all 250ms;
+}
