--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -22,15 +22,44 @@
   margin-bottom: 20px;
 }
 
+.cabs-section {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 2rem;
+  gap: 0.5rem;
+}
+
+.search-cabs {
+  display: flex;
+  flex-direction: row;
+}
+
 .cab-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 12px;
-  padding-top: 200px;
+  gap: 30px;
+  padding-top: 40px;
 }
 
-.cab-info {
-  z-index: 99;
+.cab-img .cab-info {
+  z-index: 10;
+  margin-top: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.cab-info .cab-info-text h3 {
+  margin: 19px;
+  font-weight: 900;
+  font-family: cursive;
+}
+
+.cab-info .cab-info-del {
+  color: azure;
+  cursor: pointer;
 }
 
 .cab-img p {
@@ -60,9 +89,133 @@
   margin-top: 15px;
 }
 
-.add-cab-modal {
+.add-modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--secondary-color);
+  padding: 22px;
+  border-radius: 12px;
+  z-index: 10;
+  padding-bottom: 15px;
+}
+
+.add-modal .modal-header {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.add-modal .modal-header span {
+  cursor: pointer;
+}
+
+.add-modal .modal-inputs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.add-modal .modal-inputs label {
+  font-size: 1.1rem;
+  margin-right: 0.5rem;
+  margin-left: 1rem;
+}
+
+.add-modal .modal-inputs input {
+  background-color: black;
+  color: white;
+  border: white 1px solid;
+  border-radius: 8px;
+  padding: 5px;
+  width: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+
+.add-modal .modal-inputs input:focus {
+  outline: none;
+  border: white 2px solid;
+}
+
+.add-modal .modal-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.add-modal .modal-footer button {
+  margin: 20px 220px;
+  background-color: yellow;
+  color: black;
+  border-top-left-radius: 58px;
+  border-bottom-right-radius: 58px;
+  cursor: pointer;
+}
+
+.update-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--secondary-color);
+  padding: 22px;
+  border-radius: 12px;
+  z-index: 10;
+  padding-bottom: 15px;
+}
+
+.update-modal .update-modal-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.update-modal .update-modal-body {
+  padding: 10px;
+}
+
+.update-modal .update-modal-body .update-modal-inputs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.update-modal .update-modal-body .update-modal-inputs label {
+  font-size: 1.1rem;
+  margin-right: 0.5rem;
+  margin-left: 1rem;
+}
+
+.update-modal .update-modal-body .update-modal-inputs input {
+  background-color: black;
+  color: white;
+  border: white 1px solid;
+  border-radius: 8px;
+  padding: 5px;
+  width: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+
+.update-modal .update-modal-body .update-modal-inputs input:focus {
+  outline: none;
+  border: white 2px solid;
+}
+
+.update-modal .update-modal-footer {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.update-modal .update-modal-footer button {
+  cursor: pointer;
+  background-color: yellow;
+  color: black;
+  border-radius: 15px;
+  padding: 8px;
 }
