Fixed search bar for cabs

--- a/app/globals.css
+++ b/app/globals.css
@@ -203,3 +203,15 @@ a {
   flex: 2 1 auto;
   transition: all 250ms;
 }
+
+.search-button{
+  padding: .8rem 1.5rem;
+  background-color: var(--secondary-color);
+  border-radius: 10px;
+  font-size: .8rem;
+  width: fit-content;
+
+  white-space: nowrap;
+  user-select: none;
+  cursor: pointer;
+}
