--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -31,7 +31,7 @@
 
 .search-cabs {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .cab-cards {
@@ -218,4 +218,11 @@
   color: black;
   border-radius: 15px;
   padding: 8px;
+}
+
+.search-boxes {
+  display: flex;
+  justify-content: space-between;
+  gap: .5rem;
+  align-items: center;
 }
