--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -4,29 +4,22 @@
 }
 
 .add-cabs-btn {
-  width: 80%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
   background-color: yellow;
   color: black;
-  font-size: 20px;
-  border-radius: 8px;
-  border: none;
-  cursor: pointer;
-  transition-duration: 0.4s;
-  border-top-left-radius: 40px;
-  border-bottom-right-radius: 40px;
-  margin: auto;
-  margin-bottom: 20px;
+  width: auto;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
-.cabs-section {
+.btn-and-card {
   display: flex;
-  flex-direction: column;
-  padding: 1rem 2rem;
-  gap: 0.5rem;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3.5rem;
 }
 
 .search-cabs {
@@ -41,52 +34,65 @@
   padding-top: 40px;
 }
 
-.cab-img .cab-info {
-  z-index: 10;
-  margin-top: 140px;
+.cabs-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.cab-info .cab-info-text h3 {
-  margin: 19px;
-  font-weight: 900;
-  font-family: cursive;
-}
-
-.cab-info .cab-info-del {
-  color: azure;
-  cursor: pointer;
-}
-
-.cab-img p {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  color: whitesmoke;
-  font-size: 20px;
-  font-weight: 800;
-  text-align: center;
-  opacity: 1;
-  margin: 25px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 1rem 2rem;
+  gap: 0.5rem;
 }
 
 .cab-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
   gap: 20px;
   align-items: center;
   overflow: hidden;
+  margin-top: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 700;
+  background-color: var(--secondary-color);
+  border-radius: 20px;
+}
+
+.cab-container .cab-info-top {
+  margin: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.cab-container .cab-info-top p {
+  margin: 0 15px;
+}
+
+.cab-container .cab-info-top span {
+  cursor: pointer;
 }
 
 .cab-container .cab-img {
-  margin-top: 15px;
+  margin-top: auto;
+}
+
+.cab-container .cab-img img {
+  width: 280px;
+  height: 160px;
+}
+
+.cab-container .cab-info-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.cab-container .cab-info-bottom .bottom-color .color-box {
+  width: 20px;
+  height: 20px;
+  border-radius: 25%;
+  margin: 0 15px;
 }
 
 .add-modal {
