--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -6,19 +6,22 @@
 .add-cabs-btn {
   background-color: yellow;
   color: black;
-  width: auto;
-  height: 100%;
+  padding: 1rem 2rem;
+  border-radius: 10px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  cursor: pointer;
 }
 
 .btn-and-card {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  padding-top: 1rem;
   gap: 3.5rem;
 }
 
@@ -30,8 +33,7 @@
 .cab-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
-  padding-top: 40px;
+  gap: 2rem;
 }
 
 .cabs-section {
@@ -49,10 +51,7 @@
   gap: 20px;
   align-items: center;
   overflow: hidden;
-  margin-top: 20px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   background-color: var(--secondary-color);
   border-radius: 20px;
 }
@@ -65,7 +64,7 @@
 }
 
 .cab-container .cab-info-top p {
-  margin: 0 15px;
+  margin: 0 12px;
 }
 
 .cab-container .cab-info-top span {
@@ -85,14 +84,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 20px;
+  padding: 20px;
+  align-items: center;
 }
 
 .cab-container .cab-info-bottom .bottom-color .color-box {
   width: 20px;
   height: 20px;
   border-radius: 25%;
-  margin: 0 15px;
+  margin: 0 10px;
 }
 
 .add-modal {
@@ -128,6 +128,7 @@
   font-size: 1.1rem;
   margin-right: 0.5rem;
   margin-left: 1rem;
+  white-space: nowrap;
 }
 
 .add-modal .modal-inputs input {
@@ -171,6 +172,7 @@
   border-radius: 12px;
   z-index: 10;
   padding-bottom: 15px;
+  user-select: none;
 }
 
 .update-modal .update-modal-header {
@@ -188,6 +190,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  white-space: nowrap;
 }
 
 .update-modal .update-modal-body .update-modal-inputs label {
