--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -33,7 +33,8 @@
 .cab-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 4rem;
+  padding-left: 2rem;
 }
 
 .cabs-section {
@@ -160,73 +161,6 @@
   border-top-left-radius: 58px;
   border-bottom-right-radius: 58px;
   cursor: pointer;
-}
-
-.update-modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--secondary-color);
-  padding: 22px;
-  border-radius: 12px;
-  z-index: 10;
-  padding-bottom: 15px;
-  user-select: none;
-}
-
-.update-modal .update-modal-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 10px;
-}
-
-.update-modal .update-modal-body {
-  padding: 10px;
-}
-
-.update-modal .update-modal-body .update-modal-inputs {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  white-space: nowrap;
-}
-
-.update-modal .update-modal-body .update-modal-inputs label {
-  font-size: 1.1rem;
-  margin-right: 0.5rem;
-  margin-left: 1rem;
-}
-
-.update-modal .update-modal-body .update-modal-inputs input {
-  background-color: black;
-  color: white;
-  border: white 1px solid;
-  border-radius: 8px;
-  padding: 5px;
-  width: 100%;
-  text-align: center;
-  overflow: hidden;
-}
-
-.update-modal .update-modal-body .update-modal-inputs input:focus {
-  outline: none;
-  border: white 2px solid;
-}
-
-.update-modal .update-modal-footer {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-}
-
-.update-modal .update-modal-footer button {
-  cursor: pointer;
-  background-color: yellow;
-  color: black;
-  border-radius: 15px;
-  padding: 8px;
 }
 
 .search-boxes {
