--- a/app/drivers/Components/create_driver.styles.css
+++ b/app/drivers/Components/create_driver.styles.css
@@ -1,73 +1,73 @@
-.driver-modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--secondary-color);
-    padding: 20px;
-    border-radius: 12px;
-    z-index: 10;
+/* .driver-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--secondary-color);
+  padding: 20px;
+  border-radius: 12px;
+  z-index: 10;
 }
 
 .driver-modal-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .driver-modal-content .fields form {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .driver-modal-content .fields form .field {
-    display: flex;
-    flex-direction: column;
-    font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
 }
 
 .search-alter {
-    background-color: var(--background-color) !important;
+  background-color: var(--background-color) !important;
 }
 
 .driver-modal-content .top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .close-button {
-    display: flex;
-    width: fit-content;
-    user-select: none;
-    cursor: pointer;
-    border-radius: 12px;
-    padding: 5px;
-    transition: background-color 200ms ease-in;
+  display: flex;
+  width: fit-content;
+  user-select: none;
+  cursor: pointer;
+  border-radius: 12px;
+  padding: 5px;
+  transition: background-color 200ms ease-in;
 }
 
 .close-button:hover {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 }
 
 .driver-modal-content .submit {
-    display: flex;
-    align-self: center;
-    padding: 1rem;
-    background-color: var(--background-color);
-    width: fit-content;
-    border-radius: 10px;
-    user-select: none;
-    cursor: pointer;
+  display: flex;
+  align-self: center;
+  padding: 1rem;
+  background-color: var(--background-color);
+  width: fit-content;
+  border-radius: 10px;
+  user-select: none;
+  cursor: pointer;
 }
 
-.submit.delete-button{
-    background-color: #FF6969;
+.submit.delete-button {
+  background-color: #ff6969;
 }
 
-.driver-modal-content .buttons{
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
+.driver-modal-content .buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+} */
