--- a/app/Manage/management.styles.css
+++ b/app/Manage/management.styles.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 1rem 2rem;
     gap: 0.5rem;
+    height: 100vh;
 }
 
 .manage-page .manage-wrapper {
@@ -10,6 +11,7 @@
     padding: 1rem 2rem;
     justify-content: space-between;
     gap: 1rem;
+    overflow-y: auto;
 }
 
 .manage-page .manage-wrapper .cabs {
@@ -17,6 +19,7 @@
     flex-direction: column;
     gap: 1rem;
     flex: 3 1 auto;
+    overflow-y: auto;
 }
 
 .manage-page .manage-wrapper .drivers {
@@ -24,6 +27,7 @@
     flex-direction: column;
     gap: 1rem;
     flex: 1 1 auto;
+    overflow-y: auto;
 }
 
 .manage-wrapper .cab-card {
