--- a/app/globals.css
+++ b/app/globals.css
@@ -67,15 +67,15 @@ body {
   color: var(--text-color);
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.4rem;
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: #1e1e24;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #00adb5;
   border-radius: 8px;
 }
@@ -214,4 +214,25 @@ a {
   white-space: nowrap;
   user-select: none;
   cursor: pointer;
+}
+
+.skeleton {
+  opacity: .7;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 15px;
+  border-radius: 10px;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(240, 4%, 14%);
+  }
+
+  100% {
+    background-color: hsl(195, 4%, 22%);
+  }
 }
