Added search bar & QOL to Management Page

--- a/app/Manage/management.styles.css
+++ b/app/Manage/management.styles.css
@@ -48,6 +48,7 @@
     width: 100%;
     user-select: none;
     align-items: center;
+    font-size: 14px;
 
     border: 2px solid transparent;
     border-radius: 10px;
@@ -62,7 +63,10 @@
     border: 1px solid #787879;
 }
 
-.search-boxes {
+.search-boxes-mgmt {
     display: flex;
     gap: .5rem;
+    margin: 0 .5rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
