--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -49,7 +49,6 @@
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
-  gap: 20px;
   align-items: center;
   overflow: hidden;
   font-weight: 500;
@@ -85,8 +84,17 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 20px;
   align-items: center;
+}
+
+.cab-container .cab-driver-link {
+  margin: 20px;
+  padding: 6px 25px;
+  border-radius: 8px;
+  background-color: var(--background-color);
+  font-size: 13px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .cab-container .cab-info-bottom .bottom-color .color-box {
