--- a/app/Cabs/cabs.styles.css
+++ b/app/Cabs/cabs.styles.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 1rem;
-  gap: 3.5rem;
+  gap: 2rem;
 }
 
 .search-cabs {
@@ -33,8 +33,7 @@
 .cab-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 4rem;
-  padding-left: 2rem;
+  gap: 2rem;
 }
 
 .cabs-section {
@@ -54,13 +53,15 @@
   font-weight: 500;
   background-color: var(--secondary-color);
   border-radius: 20px;
+  padding: 20px;
 }
 
 .cab-container .cab-info-top {
-  margin: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 .cab-container .cab-info-top p {
@@ -82,19 +83,18 @@
 
 .cab-container .cab-info-bottom {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
 .cab-container .cab-driver-link {
-  margin: 20px;
+  display: flex;
+  align-items: center;
+  margin: 1rem;
   padding: 6px 25px;
   border-radius: 8px;
   background-color: var(--background-color);
   font-size: 13px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .cab-container .cab-info-bottom .bottom-color .color-box {
@@ -176,4 +176,10 @@
   justify-content: space-between;
   gap: 0.5rem;
   align-items: center;
+}
+
+.loading-cabs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
