removed unwanted css, altered light mode color

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 [data-theme="light"] {
-  --background-color: #e0e0e0;
+  --background-color: #e8ebeb;
   --secondary-color: #fafafa;
   --text-color: #000;
 }
