--- a/app/globals.css
+++ b/app/globals.css
@@ -182,6 +182,82 @@ a {
   z-index: 2;
 }
 
+/* Landing Page */
+.landing-frames {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  background-color: var(--background-color);
+}
+
+.cabs-flex {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #161618;
+  gap: 6rem;
+}
+
+.cabs-flex .header h2 {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 7rem;
+}
+
+.cabs-flex .header h2 span {
+  color: #00adb5;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.drivers-flex {
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  background-color: #2b2b3a;
+}
+
+.drivers-flex .deets-two {
+  margin: 100px 200px; /* temporary */
+}
+
+.relations-flex {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #161618;
+  gap: 6rem;
+}
+
+.relations-flex .top {
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+}
+
+.relations-flex .bottom .git-buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+}
+
 .search {
   outline: none;
   padding: 0.7rem;
