--- a/app/globals.css
+++ b/app/globals.css
@@ -188,74 +188,98 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin: 0;
-  background-color: var(--background-color);
+}
+
+.landing-frames div.container {
+  padding: .5rem;
+  height: 100vh !important;
+  overflow: hidden;
+}
+
+.landing-frames div.container:nth-child(odd) {
+  background: var(--background-color) !important;
+}
+
+.landing-frames div.container:nth-child(even) {
+  background: #2b2b3a !important;
 }
 
 .cabs-flex {
-  margin: auto;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   text-align: center;
-  background-color: #161618;
-  gap: 6rem;
+  padding: 1.5rem 0 0 0 !important;
+  gap: 3rem;
 }
 
 .cabs-flex .header h2 {
-  font-family: "Poppins";
-  font-weight: 600;
-  font-size: 7rem;
+  font-weight: 500;
+  font-size: 5rem;
 }
 
 .cabs-flex .header h2 span {
   color: #00adb5;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.deets-one{
+  font-size: 1.5rem;
 }
 
 .drivers-flex {
-  margin: auto;
   display: flex;
   flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  padding: 2rem 0 2rem 2rem !important;
+}
+
+.drivers-flex .deets-two {
+  font-size: 2rem;
+  flex: 1 1 0;
+}
+
+.deets-three{
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-top: 3rem;
+}
+
+.relations-flex {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   align-items: center;
   justify-content: space-between;
   text-align: center;
-  background-color: #2b2b3a;
-}
-
-.drivers-flex .deets-two {
-  margin: 100px 200px; /* temporary */
-}
-
-.relations-flex {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: #161618;
-  gap: 6rem;
+  padding: 5rem 0 0 0 !important;
+  gap: 3rem;
 }
 
 .relations-flex .top {
   display: flex;
   flex-direction: row;
-  gap: 10rem;
 }
 
 .relations-flex .bottom .git-buttons {
   display: flex;
   flex-direction: row;
-  gap: 10rem;
+}
+
+.git-flex {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem !important;
 }
 
 .search {
@@ -291,6 +315,7 @@ a {
   user-select: none;
   cursor: pointer;
 }
+
 .skeleton {
   opacity: 0.7;
   animation: skeleton-loading 1s linear infinite alternate;
